// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render areas.indicator - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="areas.indicator"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="areas.indicator"
    >
      <div
        className="ant-spin-dot"
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        indicator
      </div>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render default - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="default"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="default"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.delay - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.delay"
>
  <div
    className="ant-spin-container"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.size: large - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.size: large"
>
  <div>
    <div
      className="ant-spin ant-spin-lg ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="properties.size: large"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.size: small"
>
  <div>
    <div
      className="ant-spin ant-spin-sm ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="properties.size: small"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.spinning - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.spinning"
>
  <div
    className="ant-spin-container"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.style: border: 5px solid blue - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.style: border: 5px solid blue"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},{\\"border\\":\\"5px solid blue\\"}]}"
      id="properties.style: border: 5px solid blue"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.tip - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {}"
  id="properties.tip"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning ant-spin-show-text {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="properties.tip"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
      <div
        className="ant-spin-text"
      >
        Loading spinner
      </div>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Render properties.wrapperStyle: border: 5px solid blue - value[0] 1`] = `
<div
  className="ant-spin-nested-loading {\\"style\\":{\\"border\\":\\"5px solid blue\\"}}"
  id="properties.wrapperStyle: border: 5px solid blue"
>
  <div>
    <div
      className="ant-spin ant-spin-spinning {\\"style\\":[{\\"textAlign\\":\\"center\\",\\"width\\":\\"100%\\",\\"padding\\":\\"80px 0\\"},null]}"
      id="properties.wrapperStyle: border: 5px solid blue"
    >
      <span
        className="ant-spin-dot ant-spin-dot-spin"
      >
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
        <i
          className="ant-spin-dot-item"
        />
      </span>
    </div>
  </div>
  <div
    className="ant-spin-container ant-spin-blur"
  >
    <div
      style={
        Object {
          "border": "1px solid red",
          "padding": 10,
        }
      }
    >
      content
    </div>
  </div>
</div>
`;

exports[`Test Schema areas.indicator 1`] = `true`;

exports[`Test Schema areas.indicator 2`] = `null`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.delay 1`] = `true`;

exports[`Test Schema properties.delay 2`] = `null`;

exports[`Test Schema properties.size: large 1`] = `true`;

exports[`Test Schema properties.size: large 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.spinning 1`] = `true`;

exports[`Test Schema properties.spinning 2`] = `null`;

exports[`Test Schema properties.style: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.style: border: 5px solid blue 2`] = `null`;

exports[`Test Schema properties.tip 1`] = `true`;

exports[`Test Schema properties.tip 2`] = `null`;

exports[`Test Schema properties.wrapperStyle: border: 5px solid blue 1`] = `true`;

exports[`Test Schema properties.wrapperStyle: border: 5px solid blue 2`] = `null`;
